# ix

./: .replit  Dockerfile  pyproject.toml  requirements.txt
api/: main.py  settings.yml
api/src/: app.py  app_request.py  application.py  celery_app.py  celery_app_test.py  common.py  project.py
web/: package-lock.json  package.json
web/design/: PageList:
web/src/: App.tsx  types.ts
web/src/pages/application/: ApplicationAvatar.tsx  ApplicationCard.tsx  ApplicationCreate.tsx  ApplicationList.tsx  ApplicationShow.tsx  GridList.tsx  index.ts
web/src/pages/dashboard/: Dashboard.tsx
web/src/pages/project/: GridList.tsx  Project.tsx  ProjectAvatar.tsx  ProjectCard.tsx  ProjectCreate.tsx  ProjectEdit.tsx  ProjectForm.tsx  ProjectList.tsx  ProjectShow.tsx  index.ts
web/src/pages/request/: RequestCreate.tsx  RequestForm.tsx  RequestList.tsx  index.ts
